--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"YOUR_ATERNOS_SERVER_IP",
-	"port": "YOUR_ATERNOS_SERVER_PORT",
-	"name": "BOT_NAME"
+	"ip":"78.46.105.177",
+	"port": "38381",
+	"name": "AntiLifeSaverSMP"
 }
